--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-cat <<EOF > index.html
 <html>
 <head>
-<title>Пример 1</title>
+<title>Example1</title>
 </head>
 <body>
 <H1>Hello!</H1>
 <P> Hello World! </P>
-<P> Этот *.html-файл может быть одновременно открыт и в Notepad, и в Netscape. Сохранив изменения в Notepad, просто нажмите кнопку Reload ('перезагрузить') в Netscape, чтобы увидеть эти изменения реализованными в HTML-документе. </P>
 </body>
 </html>
